Fix: equality between aliases of Seq.t in interface

--- a/bundles/stdcompat/stdcompat-7/stdcompat__seq_s.mli.in
+++ b/bundles/stdcompat/stdcompat-7/stdcompat__seq_s.mli.in
@@ -9,9 +9,7 @@ and 'a node = 'a Seq.node =
 @BEGIN_BEFORE_4_07_0@
 type 'a t = unit -> 'a node
 and 'a node =
-@BEGIN_WITH_SEQ_PKG@
-  'a Seq.node =
-@END_WITH_SEQ_PKG@
+  'a Stdcompat__init.seq_node =
   | Nil
   | Cons of 'a * 'a t
 @END_BEFORE_4_07_0@
